Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Added a LinkTitle module for getting the title of a web page posted in a
      channel.

3.0 Alpha 4
===============================================================================
    * Added a Dictionary module for looking up definitions of words.
    * server:ajoin now supports channel keys by spacing the name and key.
    * Hooks can now block events by returning -1.
    * bin/buildmod now retrieves the POD from modules and creates man(1) page
      plus HTML file.
    * cjoin() now supports a channel key as the last argument.
    * Added a ChanTopics module for advanced management of channel topics.
    * bantype is now a required configuration value.
    * Added ban() to API::IRC.
    * Changed on_cprivmsg arguments to: \%src, $channel, @msg
    * Changed on_uprivmsg arguments to: \%src, @msg
    * Bug fix: Commands getting Permission denied even with incorrect prefix.
    * Changed command callback arguments to: \%src, @args
    * Bundle server with \%src in the on_rcjoin event.
    * logchan is now joined automatically.
    * Changed on_notice arguments to: \%src, $target, @msg
    * Clean up shutdown.
    * Created event on_shutdown.
    * Shutdown if there are no more IRC connections.
    * Added the ability to use printf(3) % variables in trans().
    * Added slog() to API::Log for logging to IRC.
    * Added a Greet module for greeting users on join.
    * Added PostgreSQL support. Official modules do not support this yet.
    * database:format now a required configuration value.
    * Added support for MySQL. ./install --with-mysql
    * Added a database upgrade script for upgrading the `qdb` table in 3.0.0a3
      to the new format used by 3.0.0a4.

3.0 Alpha 3
===============================================================================