@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added command level 3 for logchan-only command.
     * Added a LinkTitle module for getting the title of a web page posted in a
       channel.
 
